--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Test",
   "main": "index.js",
   "scripts": {
+    "watch": "sass src/scss:dist/css --watch",
     "build": "sass src/scss:dist/css",
-    "start": "sass --watch src/scss:dist/css & live-server"
+    "start": "live-server",
+    "dev": "npm-run-all --parallel watch start"
   },
   "keywords": [],
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.57.0",
     "live-server": "^1.2.2",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.54.8"
   },
   "dependencies": {
