--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "watch": "sass src/scss:dist/css --watch",
     "build": "sass src/scss:dist/css",
     "start": "live-server",
-    "dev": "npm-run-all --parallel watch start"
+    "dev": "npm-run-all --parallel watch start",
+    "lint": "eslint **/*.js",
+    "format": "prettier --write **/*.js"
   },
   "keywords": [],
   "author": "Noroff",
@@ -16,6 +18,7 @@
     "eslint": "^8.57.0",
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
     "sass": "^1.54.8"
   },
   "dependencies": {
