--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "sass src/scss:dist/css",
     "start": "live-server",
     "dev": "npm-run-all --parallel watch start",
+    "test": "npm run test-unit",
+    "test-unit": "jest",
     "lint": "eslint **/*.js",
     "format": "prettier --write **/*.js"
   },
@@ -16,6 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "jest": "^29.2.0",
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
