--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run test-unit",
     "test-unit": "jest",
     "lint": "eslint **/*.js",
-    "format": "prettier --write **/*.js"
+    "format": "prettier --write **/*.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Noroff",
@@ -21,7 +22,9 @@
     "@babel/preset-env": "^7.19.4",
     "eslint": "^8.57.0",
     "eslint-plugin-jest": "^27.9.0",
+    "husky": "^9.0.11",
     "jest": "^29.2.0",
+    "lint-staged": "^15.2.2",
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
@@ -29,5 +32,11 @@
   },
   "dependencies": {
     "bootstrap-dark-5": "^1.1.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
