testing environment is ready to use

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,33 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
     "overrides": [
         {
             "files": [
-                "**/*.test.js"
+                "**/*.cy.js"
+            ],
+            "env": {
+                "cypress/globals": true
+            },
+            "plugins": [
+                "cypress"
+            ],
+            "extends": [
+                "plugin:cypress/recommended"
+            ],
+            "rules": {
+                "cypress/no-unnecessary-waiting": "off",
+                "no-unused-vars": "off"
+            }
+        },
+        {
+            "files": [
+                "**/*.test.js",
+                "**/*.mock.js"
             ],
             "env": {
                 "jest": true
@@ -27,5 +43,12 @@
             }
         }
     ],
-    "rules": {}
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "rules": {
+        "no-undef": "off",
+        "no-unused-vars": "warn"
+    }
 }
