--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Test",
   "main": "index.js",
   "scripts": {
-    "watch": "sass src/scss:dist/css --watch",
     "build": "sass src/scss:dist/css",
-    "start": "live-server",
-    "dev": "npm-run-all --parallel watch start",
-    "test": "npm run test-unit",
+    "start": "sass --watch src/scss:dist/css & live-server",
+    "format": "prettier -w src/**/*.js",
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint src/**/*.js --cache --fix",
+    "prepare": "husky install",
     "test-unit": "jest",
-    "lint": "eslint **/*.js",
-    "format": "prettier --write **/*.js",
-    "prepare": "husky install"
+    "test-e2e": "cypress open",
+    "test": "npm run test-unit & npm run test-e2e"
   },
   "keywords": [],
   "author": "Noroff",
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "cypress": "^13.7.3",
     "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-jest": "^27.9.0",
     "husky": "^9.0.11",
-    "jest": "^29.2.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
