--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-frameworks-ca",
+  "name": "social-media-client",
   "version": "1.0.0",
   "description": "Test",
   "main": "index.js",
